--- a/config/database.yml
+++ b/config/database.yml
@@ -26,4 +26,7 @@ production:
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: localhost
+  database: myapp_production
+  username: smilebio1@gmail.com
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+
